Details
-
Bug
-
Resolution: Done
-
Not Evaluated
-
None
-
Qt Creator 4.11.0
-
None
-
-
7f0bd2ce4e5e76758a6022e9943f869b2372abb6 (qt-labs/jom/master)
Description
This means that when it's used construct paths to run some commands (like link.exe), the the Windows command can't handle the input.
This makes jom not able to run some nmakefile which nmake can (such as when using $(MAKEDIR) to determine a root directory and using recursive makefiles).
I've attached a very short patch which fixes this. I also applied it to the MAKE variable, since that also uses / rather than \ which is unlike what actual nmake does.