Fix directory separators of the MAKEDIR variable

This variable should use native separators.

Fixes: QTCREATORBUG-23559
Change-Id: If17a38b381e95a86fb86a6bda1fde8612bec83ef
Reviewed-by: Oliver Wolff <oliver.wolff@qt.io>